Cross-validation figure

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -106,4 +106,4 @@ Second, I developed an approximate Bayesian inference method combining adaptive 
 I applied these method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order or standalone.
+Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order or as standalone studies.
