--- a/references.bib
+++ b/references.bib
@@ -2460,3 +2460,25 @@ doi = {10.1201/9781420072884-c30}
   volume = {10},
   number = {1},
 }
+
+@article{aldor2013power,
+  title={The power to see: A new graphical test of normality},
+  author={Aldor-Noiman, Sivan and Brown, Lawrence D and Buja, Andreas and Rolke, Wolfgang and Stine, Robert A},
+  journal={The American Statistician},
+  volume={67},
+  number={4},
+  pages={249--260},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{sailynoja2022graphical,
+  title={Graphical test for discrete uniformity and its applications in goodness-of-fit evaluation and multiple sample comparison},
+  author={S{\"a}ilynoja, Teemu and B{\"u}rkner, Paul-Christian and Vehtari, Aki},
+  journal={Statistics and Computing},
+  volume={32},
+  number={2},
+  pages={32},
+  year={2022},
+  publisher={Springer}
+}
