Add first beyond-borders resources and a figure

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "temp"
+resource_version <- "20231111-193806-8b573544"
 ```
 
 # Models for spatial structure {#beyond-borders}
@@ -561,6 +561,12 @@ These included countries were:
 * Zimbabwe ($n = 60$).
 
 ### Household survey data
+
+(ref:hiv-surveys) Figure caption.
+
+```{r hiv-surveys, fig.cap="(ref:hiv-surveys)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/hiv-surveys.png"))
+```
 
 Data from the most recent publicly available Population Health Impact Assessment (PHIA) survey were used for each country.
 Sampling weights
