--- a/references.bib
+++ b/references.bib
@@ -2482,3 +2482,17 @@ doi = {10.1201/9781420072884-c30}
   year={2022},
   publisher={Springer}
 }
+
+@Manual{howes2023arealutils,
+  title = {arealutils: Utility functions for beyond-borders},
+  author = {Adam Howes},
+  year = {2023},
+  note = {R package version 0.0.1},
+}
+
+@Manual{howes2023multiutils,
+  title = {multi.utils: Utility functions for multi-agyw},
+  author = {Adam Howes},
+  year = {2023},
+  note = {R package version 0.1.0},
+}
