--- a/references.bib
+++ b/references.bib
@@ -2496,3 +2496,14 @@ doi = {10.1201/9781420072884-c30}
   year = {2023},
   note = {R package version 0.1.0},
 }
+
+@article{bosse2023scoring,
+  title={Scoring epidemiological forecasts on transformed scales},
+  author={Bosse, Nikos I and Abbott, Sam and Cori, Anne and van Leeuwen, Edwin and Bracher, Johannes and Funk, Sebastian},
+  journal={PLoS Computational Biology},
+  volume={19},
+  number={8},
+  pages={e1011393},
+  year={2023},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
