Better abstract r.e. Chapter 4

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -524,7 +524,7 @@ The MSE is a simple and popular measure given by
 \text{MSE}(f, \omega) \approx \frac{1}{S} \sum_{s = 1}^S (\phi_s - \omega)^2.
 \end{equation}
 
-The CRPS is a strictly proper scoring rule (SPSR) which "enjoys appealing properties and might serve as a standard score" [@gneiting2007strictly].
+The CRPS is a strictly proper scoring rule (SPSR) which has favourable properties and is regarded as a default choice [@gneiting2007strictly].
 Any scoring rule which is not strictly proper rewards a misrepresentation of beliefs.
 The CRPS is
 \begin{equation}
